<resources>
    <string name="app_name">Life Management App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="drawer_open">Opened</string>
    <string name="drawer_close">Closed</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_budget">Budget</string>
    <string name="action_health">Health</string>
    <string name="title_activity_schedule_form">Schedule_form</string>

    // Strings for event form
    <string name="event_name">Event Name</string>
    <string name="set_time">Set Time</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
